# ai-trader-mt5_0.1.1

./: .gitignore  1.0.0  1.11.0  1.24.0  1.3.0  2.0.0  3.7.0  6.0  INSTALL.md  LICENSE  README.md  clean_models.py  diagnose_trading.py  install.bat  install_dependencies.py  main.py  pyproject.toml  requirements.txt  robot_controller.py  run.py  symbol_selector.py  test_data_loading.py  test_order.py  test_order_advanced.py
config/: example_settings.yaml  settings.json
src/core/: mt5_client.py  mt5_client_mock.py  trader.py
src/ml/: feature_engineer.py  model.py  model_builder.py
src/utils/: config.py  risk_manager.py
